# quantogral

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: package-lock.json
dashboard/src/: App.css  App.jsx
data/: data_download_yf.py
src/quantogral/core/market_events/: market_event_base.py  ohlcv_event.py  quote_event.py
